--- a/views/singleMovie.ejs
+++ b/views/singleMovie.ejs
@@ -12,8 +12,6 @@
 	    <script type="text/javascript" src="/javascripts/bootstrap.js" charset="utf-8"></script>
 	    <script type="text/javascript" src="/javascripts/navbar.js" charset="utf-8"></script>
 	    <script type="text/javascript" src="/javascripts/singleMovie.js" charset="utf-8"></script>
-	      <script src="/javascripts/videojs-ie8.min.js"></script>
-	      <script src="/javascripts/video.min.js"></script>
 	       <!-- <script>
 		    
 		    videojs.options.flash.swf = "/video/video-js.swf";
@@ -25,28 +23,63 @@
 		<div class="wrap" style="background: url(<%= movie[0].imageUrl %>);"></div>
 	   <article>
 	   			<% include header.ejs %>
-	   			 
 	   			<div class="m">
-					<video id="my-video" class="video-js vjs-default-skin vjs-big-play-centered vjs-tech" controls preload="auto"
+					<script type="text/javascript" src="ckplayer/ckplayer.js" charset="UTF-8"></script>
+					<div id="video" style="width: 100%; height: 600px;"></div>
+					<script>
+                        var videoObject = {
+                            container: '#video', //容器的ID或className
+                            variable: 'player', //播放函数名称
+                            loaded: 'loadedHandler', //当播放器加载后执行的函数
+                            loop: false, //播放结束是否循环播放
+                            //autoplay: true, //是否自动播放
+                            //duration: 500, //设置视频总时间
+                           // cktrack: 'material/srt.srt', //字幕文件
+                            poster: '<%= movie[0].imageUrl %>', //封面图片
+                            preview: { //预览图片
+                                file: ['<%= movie[0].imageUrl %>'],
+                                scale: 2
+                            },
+                            config: '', //指定配置函数
+                            debug: true, //是否开启调试模式
+                            //flashplayer: true, //强制使用flashplayer
+                            drag: 'start', //拖动的属性
+                            live: true, //是否是直播
+                            seek: 0, //默认跳转的时间
+                           // html5m3u8:true,
+                            //mobileCkControls:true,//是否在移动端（包括ios）环境中显示控制栏
+                            /*video: [
+                                ['http://img.ksbbs.com/asset/Mon_1703/05cacb4e02f9d9e.mp4', 'video/mp4', '中文标清', 0],
+                                ['http://img.ksbbs.com/asset/Mon_1703/d0897b4e9ddd9a5.mp4', 'video/mp4', '中文高清', 0],
+                                ['http://img.ksbbs.com/asset/Mon_1703/eb048d7839442d0.mp4', 'video/mp4', '英文高清', 10],
+                                ['http://img.ksbbs.com/asset/Mon_1703/d30e02a5626c066.mp4', 'video/mp4', '英文超清', 0]
+                            ]//视频地址*/
+                            video:[['<%= movie[0].videoUrl %>']],
+                            //video:[['http://jie.njhzmxx.com/playm3u8/?type=playm3u8']],
+                        };
+                        var player = new ckplayer(videoObject);
+					</script>
+					<!--<video id="my-video" class="video-js vjs-default-skin vjs-big-play-centered vjs-tech" controls preload="auto"
 					  poster="<%= movie[0].imageUrl %>" data-setup='{"aspectRatio":"640:267", "playbackRates": [1, 1.5, 2]}'>
-				
 						<source src="<%= movie[0].videoUrl %>" type="video/mp4">
 						<source src="<%= movie[0].videoUrl %>" type="video/webm">
 						<source src="<%= movie[0].videoUrl %>" type="video/ogg">
-						
-							
+						<source src="<%= movie[0].videoUrl %>" type="application/x-mpegURL">
 						<p class="vjs-no-js">
 						  To view this video please enable JavaScript, and consider upgrading to a web browser that
 						  <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
 						</p>
 					 </video>
+					<script src="/javascripts/videojs-ie8.min.js"></script>
+					<script src="/javascripts/video.min.js"></script>
+					<script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/5.12.2/videojs-contrib-hls.min.js"></script>
 					  <script type="text/javascript">
 						var myPlayer = videojs('my-video');
 						videojs("my-video").ready(function(){
 							var myPlayer = this;
 							myPlayer.pause();
 						});
-					</script>
+					</script>-->
 				</div>
 	   			<div class="container titleMovie">
 	   				<div class="media center-block text-center text-primary">
@@ -171,5 +204,6 @@
 	   			
 	   			<% include footer.ejs %>
 	   </article>
+
 	</body>
 </html>
